# mcas

./: CMakeLists.txt  README.md
examples/personalities/cpp_pm_sort/chunk_generation/: DB_generator.py  chunk_generator.py
examples/personalities/cpp_pm_sort/src/: cpp_pm_sort_client.cpp  cpp_pm_sort_client.h  cpp_pm_sort_plugin.cpp  cpp_pm_sort_plugin.h  cpp_pm_sort_test.cpp
src/apps/: CMakeLists.txt
src/apps/nvbench/: CMakeCache.txt  CMakeLists.txt  Makefile  check-nvdimm.sh  cmake_install.cmake  ns2bw.py  test-bandwidth-both-nodes.sh  test-bandwidth.sh  test-latency.sh
src/apps/nvbench/data/: feb1_luwperf12.txt  jan30_luwperf12.txt  jan31_luwperf12.txt
src/apps/nvbench/src/: chronobench.cpp  cpu.h  cpu_mask_iterator.cpp  cpu_mask_iterator.h  cpu_measured.cpp  cpu_measured.h  external_count.cpp  external_count.h  geometry.cpp  geometry.h  histogram_linear.h  histogram_log2.h  join.h  load_generator.cpp  load_generator.h  mem_run.cpp  mem_run.h  mem_test.cpp  mem_test.h  memcpy_init.cpp  memcpy_init.h  numa_dram.h  numa_local.h  numa_on_node.h  numa_remote.h  nvbench.cpp  ops.cpp  ops.h  papi_list.h  pattern.h  persist.cpp  persist.h  pmem_access.h  pmem_helper.h  pmem_xms_helper.h  reporter_papi.cpp  reporter_papi.h  reporter_rusage.cpp  reporter_rusage.h  round.h  (+12 more)
src/components/api/: fabric_itf.h  kvstore_itf.h  mcas_itf.h
src/components/client/mcas-client/src/: connection.cpp  connection.h  mcas_client.cpp  mcas_client.h
src/components/index/rbtree/: CMakeLists.txt
src/components/net/fabric/src/: fabric_client.h  fabric_client_grouped.h
src/components/store/hstore/: CMakeLists.txt
src/components/store/hstore/src/: allocator_cc.h  allocator_rc.h  as_pin.h  deallocator_cc.h  deallocator_rc.h  definite_lock.h  heap_cc.cpp  heap_cc.h  heap_cc_ephemeral.cpp  heap_cc_ephemeral.h  heap_mc.cpp  heap_mc.h  heap_mc_ephemeral.cpp  heap_mc_ephemeral.h  heap_mc_shim.cpp  heap_mm.cpp  heap_mr.cpp  heap_mr.h  heap_mr_ephemeral.cpp  heap_mr_ephemeral.h  heap_rc.cpp  heap_rc.h  heap_rc_ephemeral.cpp  heap_rc_ephemeral.h  hstore.cpp  hstore_alloc_type.h  hstore_nupm.tcc  monitor_pin.h  persist_atomic_controller.tcc  persist_map.tcc  persist_map_controller.tcc  region.h  session.h  session.tcc
src/lib/: CMakeLists.txt
src/lib/common/include/common/: to_string.h
src/lib/libccpm/include/ccpm/: cca.h
src/lib/libccpm/unit_test/: CMakeLists.txt
src/lib/libmm/src/: mm_wrapper.cpp
src/lib/libnupm/include/nupm/: mappers.h
src/lib/libnupm/src/: region.h
src/mm/: mm_plugin_itf.h  plugin.cpp.template
src/mm/ccpm/src/: mm_plugin.cpp
src/mm/jemalloc/src/: mm_plugin_jemalloc.cpp
src/mm/passthru/src/: mm_plugin_passthru.c
src/mm/rcalb/src/: mm_plugin_rcalb.cpp
src/python/pymm/feature_selection/: Feature_selection_DRAM.py  Feature_selection_NVM.py  README.md  dataset_20KB_features.csv  dataset_20KB_target.csv  load_data.py  store_data.py
src/server/mcas/: CMakeLists.txt
src/server/mcas/src/: config_file.cpp  connection_handler.h  shard.cpp  shard.h  shard_ado.cpp
testing/kv-test/src/: main.cpp
testing/regression/mcas/: run-tests.sh
